// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First Item(s) In Array 1`] = `
<li>
  Go shopping
</li>
`;

exports[`Last Item(s) In Array 1`] = `
<li>
  Raid fridge!
</li>
`;

exports[`Strip Items(s) From Array 1`] = `
Array [
  <li>
    Do laundry
  </li>,
  <li>
    Raid fridge!
  </li>,
]
`;
